--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-	<h2>My Form</h2>
-	<form method="POST">
-		{{ form.csrf_token }}
-		{{ form.name.label }}  {{ form.name }}
-		{{ form.tags.label }} {{ form.tags }}
-		{{ form.submit }}
-		<input type="submit" value="GO">
-	</form>
+{% for event in events %}
+	<p>Type: {{ event.type }}</p>
 
 
 </body>
